--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Mono&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
@@ -134,6 +134,6 @@
         </div>
       </div>
     </div>
-    <script src="src/index.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
