added link open-source code

--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
         </div>
       </div>
     </div>
+    <span>
+      <a href="https://github.com/Phinni/SheCodes_WeatherApp" target="_blank"
+        >open-source code
+      </a>
+      by Josefine Werthmann
+    </span>
     <script src="script.js"></script>
   </body>
 </html>
